--- a/src/components/main-layout/main-layout.scss
+++ b/src/components/main-layout/main-layout.scss
@@ -1,15 +1,15 @@
-import styled from "styled-components";
-
-export const StyledMainLayout = styled.div`
+.main-layout {
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
+
   .page-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-color: #0b0d17;
   }
-`;
+}
