--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -106,7 +106,7 @@ header {
 
         background: rgba(255, 255, 255, 0.04);
         backdrop-filter: blur(4.07rem);
-        transition: all .7s;
+       // transition: all .7s;
 
         .navbar {
             display: flex;
