--- a/src/pages/technology/technology-content/technology-content.scss
+++ b/src/pages/technology/technology-content/technology-content.scss
@@ -1,4 +1,4 @@
-@use "assets/scss/colors.scss";
+@import '@/assets/scss/colors';
 
 .tech-container {
 
@@ -12,20 +12,20 @@
 
             nav {
                 li a {
-                    color: colors.$white;
+                    color: $color-white;
                     border-radius: 50%;
                     border: .1rem solid hsla(0, 0%, 100%, 0.25);
                     display: grid;
                     place-content: center;
 
                     &:hover {
-                        border-color: colors.$white;
+                        border-color: $color-white;
                     }
 
                     &:is(.active) {
-                        color: colors.$black;
-                        background: colors.$white;
-                        border-color: colors.$white;
+                        color: $color-black;
+                        background: $color-white;
+                        border-color: $color-white;
                     }
                 }
             }
@@ -52,6 +52,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .page-container:has(.tech-container) {
+        padding-inline: 0;
+    }
+
     .tech-container {
         .tech-content {
             display: flex;
@@ -109,6 +113,14 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1439px) {
+    .page-container:has(.tech-container) {
+        padding-inline: 0;
+
+        .subheading-1 {
+            padding-left: 4rem;
+        }
+    }
+
     .tech-container {
         .tech-content {
             display: flex;
@@ -167,6 +179,10 @@
 }
 
 @media only screen and (min-width: 1440px) {
+    .page-container:has(.tech-container) {
+        padding-right: 0;
+    }
+
     .tech-container {
         height: 100%;
 
@@ -182,7 +198,7 @@
                     margin-right: 8rem;
 
                     li a {
-                        color: colors.$white;
+                        color: $color-white;
                         font-size: 3.3rem;
                         line-height: 3.7rem;
                         width: 8rem;
