fix: fix fonts path

--- a/src/assets/scss/_font.scss
+++ b/src/assets/scss/_font.scss
@@ -1,19 +1,19 @@
 @font-face {
     font-family: "Barlow";
-    src: url("./fonts/Barlow.ttf") format('truetype');
+    src: url("@/assets/fonts/Barlow.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "Barlow Condensed";
-    src: url("./fonts/BarlowCondensed.ttf") format('truetype');
+    src: url("@/assets/fonts/BarlowCondensed.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "Bold";
-    src: url("./fonts/Barlow-Bold.ttf") format('truetype');
+    src: url("@/assets/fonts/Barlow-Bold.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "Bellefair";
-    src: url("./fonts/Bellefair.ttf") format('truetype');
+    src: url("@/assets/fonts/Bellefair.ttf") format('truetype');
 }
